fix(devindex): Adjust tab strip height and indicator contrast (#9216)

--- a/resources/scss/theme-neo-light/apps/devindex/home/ControlsContainer.scss
+++ b/resources/scss/theme-neo-light/apps/devindex/home/ControlsContainer.scss
@@ -1,6 +1,6 @@
 :root .neo-theme-neo-light {
     --devindex-tab-indicator-bg    : #3E63DD;
     --devindex-tab-text-color      : #fff;
-    --devindex-tab-text-color-pressed: #3E63DD;
-    --devindex-tab-toolbar-bg      : #8BA6FF;
+    --devindex-tab-text-color-pressed: #fff;
+    --devindex-tab-toolbar-bg      : #5d83a7;
 }
